CSS Section update

--- a/CSS/about.html
+++ b/CSS/about.html
@@ -2,21 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/style.css">
     <title>My First Website</title>
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li> Home</li>
-          <li> <a href="about.html">About</a></li>
+          <li> <a href="index.html">Home</a></li>
+          <li> About</li>
           <li><a href="login.html">Login</a></li>
         </ul>
       </nav>
     </header>
     <section>
-      <h2>Home</h2>
+      <h1>Home</h1>
       <p>Lorem ipsum </p>
     </section>
   </body>
