--- a/CSS/about.html
+++ b/CSS/about.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <title>My First Website</title>
   </head>
   <body>
@@ -15,8 +17,10 @@
       </nav>
     </header>
     <section>
-      <h1>Home</h1>
-      <p>Lorem ipsum </p>
+      <h2>About</h2>
+      <img src="/css/efe-kurnaz-RnCPiXixooY-unsplash.jpg" alt="wallpaper" width="200px" height="200px">
+    <p id="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     </section>
+    <footer> Website Made with Love</footer>
   </body>
 </html>
