--- a/CSS/index.html
+++ b/CSS/index.html
@@ -17,7 +17,18 @@
     </header>
     <section>
       <h2>Home</h2>
-      <p>Lorem ipsum </p>
+      <div id="div1">
+        <p class="webtext active">Lorem ipsum </p>
+        <p class="webtext">Lorem ipsum </p>
+        <p class="webtext">Lorem ipsum </p>
+        <p class="webtext">Lorem ipsum </p>
+      </div>
+      <div id="div2">
+        <p class="webtext unactive">Lorem ipsum </p>
+        <p class="webtext">Lorem ipsum </p>
+        <p class="webtext">Lorem ipsum </p>
+        <p class="webtext">Lorem ipsum </p>
+      </div>
     </section>
   </body>
 </html>
