--- a/Bootstrap/startup/index.html
+++ b/Bootstrap/startup/index.html
@@ -14,8 +14,21 @@
   <link rel="stylesheet" type="text/css" href="/bootstrap/Startup/style.css">
 </head>
 <body>
-  <h1 class="text-uppercase"><strong>The Biggest Startup Event of the World</strong></h1>
-  <hr>
-  <button class="btn btn-primary btn-xl" type="button" name="button"> Find out More</button>
+  <div class="container d-flex align-items-center h-100">
+    <div class="row">
+      <header class="text-center col-12">
+      <h1 class="text-uppercase"><strong>The Biggest Startup Event of the Year</strong></h1>
+      </header>
+      <div class="buffer col-12">
+
+      </div>
+      <section class="text-center col-12">
+      <hr>
+      <a href="https://mailchi.mp/40de4cdf741d/ztmstudents">
+        <button class="btn btn-primary btn-xl" type="button" name="button"> Find out More</button>
+      </a>
+      </section>
+    </div>
+  </div>
 </body>
 </html>
